13.01-kube-resources/stage/back-front-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-backend
  labels:
    app: frontend-backend
spec:
  selector:
    matchLabels:
      app: frontend-backend
  template:
    metadata:
      labels:
        app: frontend-backend
    spec:
      containers:
      - image: moshipitsyn/k8s-frontend:v1
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 80
      - image: moshipitsyn/k8s-backend:v1
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 9000
