13.01-kube-resources/stage/db-stfs.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-psql
  labels:
    app: db-psql
spec:
  serviceName: db-psql
  replicas: 1
  selector:
    matchLabels:
      app: db-psql # должен совпадать с .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: db-psql # должен совпадать с .spec.selector.matchLabels
    spec:
      containers:
      - name: db-psql
        image: postgres:alpine3.15
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: db-volume
            mountPath: /data
      volumes:
        - name: db-volume
