13.01-kube-resources/stage/back-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-back-svc
spec:
  selector:
    app: frontend-backend
  ports:
    - name: front
      protocol: TCP
      port: 80
    - name: back
      protocol: TCP
      port: 9000
