13.01-kube-resources/stage/back-front.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-backend
  labels:
    app: frontend-backend
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend-backend
  template:
    metadata:
      labels:
        app: frontend-backend
    spec:
      containers:
      - image: moshipitsyn/k8s-frontend:v1
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 80
      - image: moshipitsyn/k8s-backend:v1
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-backend
  namespace: default
spec:
  selector:
    app: frontend-backend
  ports:
    - name: frontend
      protocol: TCP
      port: 8000
      targetPort: 80
    - name: backend
      protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP # Соединение внутри кластера

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: frontend-backend
#spec:
#  selector:
#    app: frontend-backend
#  type: NodePort # соединение по внешнему IP
#  ports:
#    - name: frontend
#      protocol: TCP
#      port: 80
#      nodePort: 32100
#    - name: backend
#      protocol: TCP
#      port: 9000
#      nodePort: 32000
