13.01-kube-resources/stage/db-cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-psql
  namespace: default
spec:
  ports:
    - name: db-psql
      port: 5432
  selector:
    app: db-psql
  type: ClusterIP
