13.01-kube-resources/stage/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-psql-svc
spec:
  type: ClusterIP
  selector:
    app: db-psql
  ports:
  - name: db
    port: 5432
    protocol: TCP
