13.01-kube-resources/stage/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
  namespace: default
spec:
  serviceName: "postgres"
  selector:
    matchLabels:
      app: postgres # должен совпадать с .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: postgres # должен совпадать с .spec.selector.matchLabels
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: db-volume
            mountPath: /data
      volumes:
        - name: db-volume

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
