13.01-kube-resources/stage/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend-backend
spec:
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/backend"
        backend:
          service:
            name: frontend-backend
            port:
              number: 80
